# polars-contrib

./: polars.code-workspace  rust-toolchain  rust-toolchain.toml
data/: foods1.parquet
dev/: environment.yml
ehlo/: Cargo.toml
ehlo/src/: main.rs
i18175/: Cargo.toml  README.md
i18175/src/: main.rs
mainline/: environment.yml
