[package]
name = "i18175"
version = "0.1.0"
edition = "2021"

[dependencies]
# polars = { version = "0.40.0", features = [ "streaming", "lazy", "cloud_write", "parquet", "aws", "cloud" ] }
polars = { version = "0.41.0", features = [ "streaming", "lazy", "cloud_write", "parquet", "aws", "cloud" ] } # ERR
# polars = { version = "0.41.3", features = [ "streaming", "lazy", "cloud_write", "parquet", "aws", "cloud" ] } # ERR
# polars = { version = "0.42.0", features = [ "streaming", "lazy", "cloud_write", "parquet", "aws", "cloud" ] }
# polars = { path = "../../polars/crates/polars", features = [ "streaming", "lazy", "cloud_write", "parquet", "aws", "cloud" ] }
tokio = { version = "1.39.3", features = [ "full" ] }
